3. Уникальность элементов и сортировка. !исправлено [#424754]